    a file is TeX or LaTeX, check the .aux output to decide if it should
    run bibtex, and check the .log output to re-run LaTeX if needed.

  From Bram Moolenaar:

  - Split the non-SCons-specific functionality from SConf.py to a new,
    re-usable Conftest.py module.

  From Marko Rauhamaa:

  - Have the closing message say "...terminated because of errors" if
    there were any.

  From Christoph Wiedemann:
  
  - Fix test/SWIG.py to find the Python include directory in all cases.



RELEASE 0.92 - Wed, 20 Aug 2003 03:45:28 -0500

  From Charles Crain and Gary Oberbrunner:

  - Fix Tool import problems with the Intel and PharLap linkers.

  From Steven Knight

  - Refactor the DictCmdGenerator class to be a Selector subclass.

  - Allow the DefaultEnvironment() function to take arguments and pass
    them to instantiation of the default construction environment.

  - Update the Debian package so it uses Python 2.2 and more closely
    resembles the currently official Debian packaging info.

  From Gerard Patel

  - When the yacc -d flag is used, take the .h file base name from the
    target .c file, not the source (matching what yacc does).



RELEASE 0.91 - Thu, 14 Aug 2003 13:00:44 -0500

  From Chad Austin:

  - Support specifying a list of tools when calling Environment.Copy().

  - Give a Value Nodes a timestamp of the system time when they're
    created, so they'll work when using timestamp-based signatures.

  - Add a DefaultEnvironment() function that only creates a default
    environment on-demand (for fetching source files, e.g.).

  - Portability fix for test/M4.py.

  From Steven Knight:

  - Tighten up the scons -H help output.

  - When the input yacc file ends in .yy and the -d flag is specified,
    recognize that a .hpp file (not a .h file) will be created.

  - Make builder prefixes work correctly when deducing a target
    from a source file name in another directory.

  - Documentation fixes: typo in the man page; explain up-front about